--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ opencv-python==4.5.1.48
 PyQt5==5.15.3
 PyQt5-Qt==5.15.2
 PyQt5-sip==12.8.1
+pyqtgraph==0.11.1
 requests==2.25.1
 urllib3==1.26.3
 wincertstore==0.2
